<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tpintegradorfinal.ui.perfil.PerfilFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etPerfilDni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:hint="@string/login_dni" />

    <EditText
        android:id="@+id/etPerfilApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:hint="@string/login_apellido" />

    <EditText
        android:id="@+id/etPerfilNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:hint="@string/login_nombre" />

    <EditText
        android:id="@+id/etPerfilTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:hint="@string/login_telefono" />

    <EditText
        android:id="@+id/etPerfilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:hint="@string/login_email" />

    <EditText
        android:id="@+id/etPerfilClave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:hint="@string/login_clave"/>

    <Button
        android:id="@+id/btnPerfilModificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/perfil_boton_modificar"
        android:visibility="gone"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btnPerfilHabilitarFormulario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/perfil_boton_habilitar"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>
</ScrollView>