<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etInquilinoDni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:hint="@string/login_dni" />

    <EditText
        android:id="@+id/etInquilinoApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:hint="@string/login_apellido" />


    <EditText
        android:id="@+id/etInquilinoNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:hint="@string/login_nombre" />

    <EditText
        android:id="@+id/etInquilinoDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:hint="@string/inmueble_direccion" />

    <EditText
        android:id="@+id/etInquilinoTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:hint="@string/login_telefono" />

    <Button
        android:id="@+id/btnInquilinoAgregarModificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/perfil_boton_modificar"
        android:visibility="gone"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btnInquilinoHabilitarFormulario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/perfil_boton_habilitar"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>
