<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etPagoNroPago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:hint="@string/pago_nro_pago" />

    <EditText
        android:id="@+id/etPagoFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:hint="@string/pago_fecha" />

    <EditText
        android:id="@+id/etPagoImporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginTop="10dp"
        android:hint="@string/pago_importe" />

    <Spinner
        android:id="@+id/sPagoAlquiler"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btnPagoAgregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>
