<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etAlquilerPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginTop="10dp"
        android:hint="@string/inmueble_precio" />

    <EditText
        android:id="@+id/etAlquilerFechaInicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:hint="@string/alquiler_fechainicio" />

    <EditText
        android:id="@+id/etAlquilerFechaFin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:hint="@string/alquiler_fechafin" />

    <Spinner
        android:id="@+id/sInquilino"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp" />

    <Spinner
        android:id="@+id/sInmueble"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btnAlquilerAgregarModificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>
