<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etInmuebleDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:hint="@string/inmueble_direccion" />

    <EditText
        android:id="@+id/etInmuebleAmbientes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:hint="@string/inmueble_ambientes" />

    <Spinner
        android:id="@+id/sTipo"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:entries="@array/tipo" />

    <Spinner
        android:id="@+id/sUso"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:entries="@array/uso" />

    <EditText
        android:id="@+id/etInmueblePrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:hint="@string/inmueble_precio" />



    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/rbInmuebleDisponible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="Disponible" />

        <RadioButton
            android:id="@+id/rbInmuebleNoDisponible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:enabled="false"
            android:text="No Disponible" />

    </RadioGroup>

    <Button
        android:id="@+id/btnInmuebleAgregarModificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/perfil_boton_modificar"
        android:visibility="gone"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btnInmueleHabilitarFormulario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/perfil_boton_habilitar"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>
