<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/ivAlquiler"
        android:layout_width="90dp"
        android:layout_height="90dp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="11dp"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvAlquilerPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10sp"
            android:layout_marginStart="10sp"
            android:text="@string/inmueble_precio" />

        <TextView
            android:id="@+id/tvAlquilerFechaInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10sp"
            android:layout_marginStart="10sp"
            android:text="@string/alquiler_fechainicio" />

        <TextView
            android:id="@+id/tvAlquilerFechaFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10sp"
            android:layout_marginStart="10sp"
            android:text="@string/alquiler_fechafin" />

    </LinearLayout>

</LinearLayout>